@@ -934,7 +934,9 @@ This chapter describes how to combine C programs with COBOL programs.
 @node Main C program, Static C to COBOL, C interface, C interface
 @subsection Writing Main Program in C
 
-Include @file{libcob.h} in your C program and call @code{cob_init} before using any COBOL module:
+Include @file{libcob.h} in your C program and call @code{cob_init} before using any COBOL module.
+Do a cleanup afterwards, either by calling @code{cob_stop_run} (if your program should terminate)
+or by calling @code{cob_tidy} (if your program should go on without any further COBOL calls).
 
 @example
 #include <libcob.h>
@@ -1015,9 +1017,14 @@ main()
   char hello[8] = "Hello, ";
   char world[7] = "world!";
 
+  /* initialize the COBOL run-time library */
   cob_init(0, NULL);
 
+  /* call the static module and store its return code */
   ret = say(hello, world);
+
+  /* shutdown the COBOL run-time library, keep program running */
+  (void)cob_tidy();
 
   return ret;
 @}
@@ -1058,6 +1065,7 @@ int main()
   char hello[8] = "Hello, ";
   char world[7] = "world!";
 
+  /* initialize the COBOL run-time library */
   cob_init(0, NULL);
 
   /* Find the module with PROGRAM-ID "say". */
@@ -1069,10 +1077,11 @@ int main()
     exit(1);
   @}
 
-  /* Call the module found and exit with the return code. */
+  /* Call the module found ... */
   ret = say(hello, world);
 
-  return ret;
+  /* ...and exit with the return code. */
+  cob_stop_run(ret);
 @}
 ----------------------------------------
 @end example
