@@ -1,4 +1,8 @@
 
+2017-08-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* gnucobol.texi: explained use of cob_tidy / cob_stop_run
+
 2017-07-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* gnucobol.texi: added -std=rm and all strict variants,
